added comments and more test cases to Min spanning tree project

--- a/MTH325/Minimum_Spanning_Trees.ipynb
+++ b/MTH325/Minimum_Spanning_Trees.ipynb
@@ -1,31 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "anaconda-cloud": {},
-    "kernelspec": {
-      "display_name": "Python [default]",
-      "language": "python",
-      "name": "python3"
-    },
-    "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
-      "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.5.2"
-    },
-    "colab": {
-      "name": "Minimum Spanning Trees.ipynb",
-      "provenance": [],
-      "collapsed_sections": []
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -76,35 +49,42 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 2,
       "metadata": {
         "id": "UJlFdBJ4b-TS"
       },
+      "outputs": [],
       "source": [
         "import copy"
-      ],
-      "execution_count": 252,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 7,
       "metadata": {
         "id": "ekY15v-in0KT"
       },
+      "outputs": [],
       "source": [
         "def edge_get(graph):\n",
         "  temp = []\n",
         "\n",
+        "  # creates list from dictionary\n",
         "  for key in graph:\n",
         "    for value in graph[key]:\n",
         "      temp.append([key, value[0], value[1]])\n",
         "        \n",
+        "  # sorts by edge weights \n",
         "  temp.sort(key=lambda x: x[2])\n",
         "\n",
+        "  # removes edge weights \n",
         "  for edge in temp:\n",
         "    edge.remove(edge[2])\n",
         "\n",
         "  return remove_duplicates(temp)\n",
         "\n",
+        "# A helper method that removes duplicate edges from a list \n",
+        "# (the order of the endpoints does not matter).\n",
         "def remove_duplicates(lst):\n",
         "  temp = []\n",
         "  temp.append(lst[0])\n",
@@ -122,9 +102,7 @@
         "      matches = False\n",
         "      \n",
         "  return temp"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -137,6 +115,7 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -144,18 +123,17 @@
         "id": "QIeMKrsQn0KV",
         "outputId": "5c72a9fc-132f-4498-c14d-b492a53a0e9f"
       },
-      "source": [
-        "print(edge_get({\"A\": [[\"B\", 10], [ \"D\", 5]], \"B\": [[\"A\", 10], [\"C\", 5]], \"C\": [[\"B\", 5], [\"D\", 15]], \"D\": [[\"C\",15 ],[\"A\", 5 ]]}))\n"
-      ],
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "[['D', 'A'], ['C', 'B'], ['A', 'B'], ['D', 'C']]\n"
           ]
         }
+      ],
+      "source": [
+        "print(edge_get({\"A\": [[\"B\", 10], [ \"D\", 5]], \"B\": [[\"A\", 10], [\"C\", 5]], \"C\": [[\"B\", 5], [\"D\", 15]], \"D\": [[\"C\",15 ],[\"A\", 5 ]]}))\n"
       ]
     },
     {
@@ -189,10 +167,12 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 9,
       "metadata": {
         "collapsed": true,
         "id": "b-VhfEXGn0KX"
       },
+      "outputs": [],
       "source": [
         "def list_join(lst, elt1, elt2):\n",
         "  temp = []\n",
@@ -211,9 +191,7 @@
         "      break\n",
         "\n",
         "  return lst"
-      ],
-      "execution_count": 219,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -226,6 +204,7 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -233,19 +212,18 @@
         "id": "rmaoECERn0KX",
         "outputId": "176728bf-8e92-4e33-ceb9-2e8a012293b6"
       },
-      "source": [
-        "print(list_join([[\"A\", \"B\"], [\"C\"], [\"D\"], [\"E\", \"F\"]], \"A\", \"D\"),\n",
-        "      list_join([[\"A\", \"B\"], [\"C\"], [\"D\"], [\"E\", \"F\"]], \"A\", \"B\"))"
-      ],
-      "execution_count": 220,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "[['A', 'B', 'D'], ['C'], ['E', 'F']] [['A', 'B'], ['C'], ['D'], ['E', 'F']]\n"
           ]
         }
+      ],
+      "source": [
+        "print(list_join([[\"A\", \"B\"], [\"C\"], [\"D\"], [\"E\", \"F\"]], \"A\", \"D\"),\n",
+        "      list_join([[\"A\", \"B\"], [\"C\"], [\"D\"], [\"E\", \"F\"]], \"A\", \"B\"))"
       ]
     },
     {
@@ -281,10 +259,12 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 10,
       "metadata": {
         "collapsed": true,
         "id": "BxEkhiLRn0KY"
       },
+      "outputs": [],
       "source": [
         "def min_kruskal(graph):\n",
         "  q = edge_get(graph)\n",
@@ -304,9 +284,7 @@
         "    \n",
         "\n",
         "  return minTree"
-      ],
-      "execution_count": 261,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -319,6 +297,7 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -326,18 +305,42 @@
         "id": "xRzpypVYn0KZ",
         "outputId": "e0c171b3-fae1-4a6d-e704-fd78d4943227"
       },
-      "source": [
-        "print(min_kruskal({\"A\": [[\"B\", 10], [ \"D\", 5]], \"B\": [[\"A\", 10], [\"C\", 5]], \"C\": [[\"B\", 5], [ \"D\", 15]], \"D\": [[\"C\",15 ], [\"A\", 5 ]]}))"
-      ],
-      "execution_count": 257,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
-            "[['D', 'A'], ['C', 'B'], ['A', 'B']]\n"
+            "[['D', 'A'], ['C', 'B'], ['A', 'B']]\n",
+            "[['B', 'A'], ['D', 'C'], ['E', 'F'], ['H', 'G'], ['I', 'K'], ['L', 'J'], ['D', 'E'], ['K', 'F'], ['G', 'K'], ['C', 'B'], ['D', 'L']]\n",
+            "[['C', 'B'], ['D', 'C'], ['D', 'I'], ['F', 'D'], ['D', 'E'], ['H', 'A'], ['E', 'G'], ['G', 'H']]\n"
           ]
         }
+      ],
+      "source": [
+        "print(min_kruskal({\"A\": [[\"B\", 10], [ \"D\", 5]], \"B\": [[\"A\", 10], [\"C\", 5]], \"C\": [[\"B\", 5], [ \"D\", 15]], \"D\": [[\"C\",15 ], [\"A\", 5 ]]}))\n",
+        "print(min_kruskal({\"A\": [[\"B\", 1], [\"I\", 5], [\"H\", 5]], \n",
+        "                   \"B\": [[\"C\", 3], [\"J\", 4], [\"A\", 1]], \n",
+        "                   \"C\": [[\"B\", 3], [\"J\", 4], [\"D\", 1]], \n",
+        "                   \"D\": [[\"C\", 1], [\"L\", 3], [\"E\", 2]], \n",
+        "                   \"E\": [[\"D\", 2], [\"L\", 3], [\"F\", 1]], \n",
+        "                   \"F\": [[\"E\", 1], [\"K\", 2], [\"G\", 5]], \n",
+        "                   \"G\": [[\"H\", 1], [\"K\", 2], [\"F\", 5]], \n",
+        "                   \"H\": [[\"A\", 5], [\"I\", 5], [\"G\", 1]], \n",
+        "                   \"I\": [[\"A\", 5], [\"J\", 4], [\"K\", 1], [\"H\", 5]],\n",
+        "                   \"J\": [[\"B\", 4], [\"C\", 4], [\"L\", 1], [\"I\", 4]],\n",
+        "                   \"K\": [[\"I\", 1], [\"L\", 4], [\"F\", 2], [\"G\", 2]],\n",
+        "                   \"L\": [[\"J\", 1], [\"D\", 3], [\"E\", 3], [\"K\", 4]]\n",
+        "                   }))\n",
+        "print(min_kruskal({\"A\": [[\"B\", 30], [\"C\", 15], [\"H\", 10], [\"I\", 30]], \n",
+        "                   \"B\": [[\"A\", 30], [\"C\", 5]], \n",
+        "                   \"C\": [[\"B\", 5], [\"A\", 15], [\"D\", 5], [\"F\", 15]], \n",
+        "                   \"D\": [[\"C\", 5], [\"I\", 5], [\"F\", 5], [\"E\", 5]], \n",
+        "                   \"E\": [[\"D\", 5], [\"G\", 10], [\"F\", 10]], \n",
+        "                   \"F\": [[\"E\", 10], [\"D\", 5], [\"C\", 15], [\"G\", 15]], \n",
+        "                   \"G\": [[\"F\", 15], [\"E\", 10], [\"H\", 10]],\n",
+        "                   \"H\": [[\"G\", 10], [\"A\", 10], [\"I\", 15]], \n",
+        "                   \"I\": [[\"H\", 15], [\"D\", 5], [\"A\", 30]]\n",
+        "                   }))"
       ]
     },
     {
@@ -373,10 +376,12 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 13,
       "metadata": {
         "collapsed": true,
         "id": "fPUVQw4un0Ka"
       },
+      "outputs": [],
       "source": [
         "def min_prim(graph, source):\n",
         "  q = edge_get(graph)\n",
@@ -393,9 +398,7 @@
         "      i += 1\n",
         "\n",
         "  return t"
-      ],
-      "execution_count": 198,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -408,25 +411,50 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 14,
       "metadata": {
-        "id": "1fxW7D7dn0Ka",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "1fxW7D7dn0Ka",
         "outputId": "c0a13a7c-5223-4408-e755-5796cee6dd7e"
       },
-      "source": [
-        "print(min_prim({\"A\": [[\"B\", 10], [ \"D\", 5]], \"B\": [[\"A\", 10], [\"C\", 5]], \"C\": [[\"B\", 5], [ \"D\", 15]], \"D\": [[\"C\",15 ], [\"A\", 5 ]]}, \"A\"))"
-      ],
-      "execution_count": 199,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
-            "[['D', 'A'], ['A', 'B'], ['C', 'B']]\n"
+            "[['D', 'A'], ['A', 'B'], ['C', 'B']]\n",
+            "[['B', 'A'], ['C', 'B'], ['D', 'C'], ['D', 'E'], ['E', 'F'], ['K', 'F'], ['I', 'K'], ['G', 'K'], ['H', 'G'], ['D', 'L'], ['L', 'J']]\n",
+            "[['H', 'A'], ['G', 'H'], ['E', 'G'], ['D', 'E'], ['D', 'C'], ['C', 'B'], ['D', 'I'], ['F', 'D']]\n"
           ]
         }
+      ],
+      "source": [
+        "print(min_prim({\"A\": [[\"B\", 10], [ \"D\", 5]], \"B\": [[\"A\", 10], [\"C\", 5]], \"C\": [[\"B\", 5], [ \"D\", 15]], \"D\": [[\"C\",15 ], [\"A\", 5 ]]}, \"A\"))\n",
+        "print(min_prim({\"A\": [[\"B\", 1], [\"I\", 5], [\"H\", 5]], \n",
+        "                   \"B\": [[\"C\", 3], [\"J\", 4], [\"A\", 1]], \n",
+        "                   \"C\": [[\"B\", 3], [\"J\", 4], [\"D\", 1]], \n",
+        "                   \"D\": [[\"C\", 1], [\"L\", 3], [\"E\", 2]], \n",
+        "                   \"E\": [[\"D\", 2], [\"L\", 3], [\"F\", 1]], \n",
+        "                   \"F\": [[\"E\", 1], [\"K\", 2], [\"G\", 5]], \n",
+        "                   \"G\": [[\"H\", 1], [\"K\", 2], [\"F\", 5]], \n",
+        "                   \"H\": [[\"A\", 5], [\"I\", 5], [\"G\", 1]], \n",
+        "                   \"I\": [[\"A\", 5], [\"J\", 4], [\"K\", 1], [\"H\", 5]],\n",
+        "                   \"J\": [[\"B\", 4], [\"C\", 4], [\"L\", 1], [\"I\", 4]],\n",
+        "                   \"K\": [[\"I\", 1], [\"L\", 4], [\"F\", 2], [\"G\", 2]],\n",
+        "                   \"L\": [[\"J\", 1], [\"D\", 3], [\"E\", 3], [\"K\", 4]]},\n",
+        "                   \"A\"))\n",
+        "print(min_prim({\"A\": [[\"B\", 30], [\"C\", 15], [\"H\", 10], [\"I\", 30]], \n",
+        "                   \"B\": [[\"A\", 30], [\"C\", 5]], \n",
+        "                   \"C\": [[\"B\", 5], [\"A\", 15], [\"D\", 5], [\"F\", 15]], \n",
+        "                   \"D\": [[\"C\", 5], [\"I\", 5], [\"F\", 5], [\"E\", 5]], \n",
+        "                   \"E\": [[\"D\", 5], [\"G\", 10], [\"F\", 10]], \n",
+        "                   \"F\": [[\"E\", 10], [\"D\", 5], [\"C\", 15], [\"G\", 15]], \n",
+        "                   \"G\": [[\"F\", 15], [\"E\", 10], [\"H\", 10]],\n",
+        "                   \"H\": [[\"G\", 10], [\"A\", 10], [\"I\", 15]], \n",
+        "                   \"I\": [[\"H\", 15], [\"D\", 5], [\"A\", 30]]},\n",
+        "                   \"A\"))"
       ]
     },
     {
@@ -460,10 +488,12 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 15,
       "metadata": {
         "collapsed": true,
         "id": "WOZXgSL1n0Kb"
       },
+      "outputs": [],
       "source": [
         "def max_kruskal(graph):\n",
         "  q = edge_get(graph)\n",
@@ -484,9 +514,7 @@
         "    \n",
         "\n",
         "  return maxTree"
-      ],
-      "execution_count": 264,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -499,25 +527,50 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 16,
       "metadata": {
-        "id": "XZChzxgan0Kb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "XZChzxgan0Kb",
         "outputId": "447a8e06-cfcb-4a39-d8fa-9abf8eacd61f"
       },
-      "source": [
-        "print(max_kruskal({\"A\": [[\"B\", 10], [ \"D\", 5]], \"B\": [[\"A\", 10], [\"C\", 5]], \"C\": [[\"B\", 5], [ \"D\", 15]], \"D\": [[\"C\",15 ], [\"A\", 5 ]]}))"
-      ],
-      "execution_count": 265,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
-            "[['D', 'C'], ['A', 'B'], ['C', 'B']]\n"
+            "[['D', 'C'], ['A', 'B'], ['C', 'B']]\n",
+            "[['I', 'H'], ['F', 'G'], ['H', 'A'], ['L', 'K'], ['I', 'J'], ['J', 'C'], ['B', 'J'], ['L', 'E'], ['D', 'L'], ['G', 'K'], ['L', 'J']]\n",
+            "[['A', 'I'], ['B', 'A'], ['H', 'I'], ['G', 'F'], ['C', 'F'], ['C', 'A'], ['F', 'E'], ['D', 'E']]\n"
           ]
         }
+      ],
+      "source": [
+        "print(max_kruskal({\"A\": [[\"B\", 10], [ \"D\", 5]], \"B\": [[\"A\", 10], [\"C\", 5]], \"C\": [[\"B\", 5], [ \"D\", 15]], \"D\": [[\"C\",15 ], [\"A\", 5 ]]}))\n",
+        "print(max_kruskal({\"A\": [[\"B\", 1], [\"I\", 5], [\"H\", 5]], \n",
+        "                   \"B\": [[\"C\", 3], [\"J\", 4], [\"A\", 1]], \n",
+        "                   \"C\": [[\"B\", 3], [\"J\", 4], [\"D\", 1]], \n",
+        "                   \"D\": [[\"C\", 1], [\"L\", 3], [\"E\", 2]], \n",
+        "                   \"E\": [[\"D\", 2], [\"L\", 3], [\"F\", 1]], \n",
+        "                   \"F\": [[\"E\", 1], [\"K\", 2], [\"G\", 5]], \n",
+        "                   \"G\": [[\"H\", 1], [\"K\", 2], [\"F\", 5]], \n",
+        "                   \"H\": [[\"A\", 5], [\"I\", 5], [\"G\", 1]], \n",
+        "                   \"I\": [[\"A\", 5], [\"J\", 4], [\"K\", 1], [\"H\", 5]],\n",
+        "                   \"J\": [[\"B\", 4], [\"C\", 4], [\"L\", 1], [\"I\", 4]],\n",
+        "                   \"K\": [[\"I\", 1], [\"L\", 4], [\"F\", 2], [\"G\", 2]],\n",
+        "                   \"L\": [[\"J\", 1], [\"D\", 3], [\"E\", 3], [\"K\", 4]]\n",
+        "                   }))\n",
+        "print(max_kruskal({\"A\": [[\"B\", 30], [\"C\", 15], [\"H\", 10], [\"I\", 30]], \n",
+        "                   \"B\": [[\"A\", 30], [\"C\", 5]], \n",
+        "                   \"C\": [[\"B\", 5], [\"A\", 15], [\"D\", 5], [\"F\", 15]], \n",
+        "                   \"D\": [[\"C\", 5], [\"I\", 5], [\"F\", 5], [\"E\", 5]], \n",
+        "                   \"E\": [[\"D\", 5], [\"G\", 10], [\"F\", 10]], \n",
+        "                   \"F\": [[\"E\", 10], [\"D\", 5], [\"C\", 15], [\"G\", 15]], \n",
+        "                   \"G\": [[\"F\", 15], [\"E\", 10], [\"H\", 10]],\n",
+        "                   \"H\": [[\"G\", 10], [\"A\", 10], [\"I\", 15]], \n",
+        "                   \"I\": [[\"H\", 15], [\"D\", 5], [\"A\", 30]]\n",
+        "                   }))"
       ]
     },
     {
@@ -535,15 +588,42 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 265,
       "metadata": {
         "collapsed": true,
         "id": "7di-XVhLn0Kb"
       },
-      "source": [
-        ""
-      ],
-      "execution_count": 265,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "anaconda-cloud": {},
+    "colab": {
+      "collapsed_sections": [],
+      "name": "Minimum Spanning Trees.ipynb",
+      "provenance": []
+    },
+    "interpreter": {
+      "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+    },
+    "kernelspec": {
+      "display_name": "Python 3.9.5 64-bit",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.9.5"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
